# ptusa_main

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CTestCustom.cmake  LICENSE.txt  PR_1162_REVIEW.md  cipstats.base  readme.md  recipes_5.serialized  sonar-project.properties  test.lua  test.txt  tmp1.txt  tmp2.txt  valgrind.supp  version_info.in
.github/: CODEOWNERS  CODESTYLE.md  contributing.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: README.md  bug_report.yml  config.yml  device_request.yml  documentation.yml  feature_request.yml  general.yml
.github/workflows/: clang-format.yml  cmake.yml  codeql-analysis.yml  googlecpp-analysis.yml  scorecards.yml  sonar_build.yml
PAC/DOC/: PAC_doc.chm
PAC/IoT/: IOT_dev_lua.cpp  iot_altivar.cpp  iot_altivar.h  iot_base.cpp  iot_base.h  iot_common.cpp  iot_common.h  iot_wages_eth.cpp  iot_wages_eth.h  network_settings.cpp  network_settings.h  network_settings_lua.cpp
PAC/MINIOS7/: mos7_console.cpp  mos7_console.h  mos7_dtime.cpp  mos7_led.h  mos7_mem.cpp  mos7_mem.h  mos7_tcp_cmctr.h  mos7_types.h  mos7_wago.h  sys_7186.cpp  sys_7186.h
PAC/common/: OPCUAServer.cpp  OPCUAServer.h  OPCUA_bus_coupler_io.cpp  OPCUA_bus_coupler_io.h  OPCUA_tolua.cpp  PAC_dev.cpp  PAC_dev.h  PAC_dev_lua.cpp  PAC_err.cpp  PAC_err.h  PAC_info.cpp  PAC_info.h  PID.cpp  PID.h  analog_emulator.cpp  analog_emulator.h  bus_coupler_io.cpp  bus_coupler_io.h  cip_stats.cpp  cip_stats.h  cip_tech_def.cpp  cip_tech_def.h  cmn_tcp_cmctr.cpp  cmn_tcp_cmctr.h  comb.cpp  comb.h  i_tech_def.h  imitation_TE.cpp  imitation_TE.h  log.cpp  log.h  mcaRec.cpp  mcaRec.h  modbus_client.cpp  modbus_client.h  modbus_serv.cpp  modbus_serv.h  mode_mngr.cpp  mode_mngr.h  operation_mngr.cpp  (+30 more)
PAC/linux/: l_bus_coupler_io.cpp  l_bus_coupler_io.h  l_console.cpp  l_console.h  l_dtime.cpp  l_log.h  l_mem.cpp  l_mem.h  l_tcp_client.cpp  l_tcp_client.h  l_tcp_cmctr.cpp  l_tcp_cmctr.h  l_types.h  l_wago.cpp  l_wago.h  prj_mngr_linux.cpp  prj_mngr_linux.h  sys_linux.cpp  sys_linux.h  tcp_cmctr_lin.cpp  tcp_cmctr_lin.h  tcp_cmctr_linux.cpp  tcp_cmctr_linux.h
PAC/neuroPID/: CMakeLists.txt  PID.cpp  PID.h  PID_tuner_learning.data  emul_k.data  emul_k_z.data  emul_learning.data  emul_learning_z.data  emul_q.data  mlp.cpp  mlp.h  neuroPID.cpp  neuroPID.sln  neuroPID.vcxproj  neuroPID.vcxproj.filters  nn_manager.h  plant.cpp  plant.h  sample.cpp  sample.h  stdafx.h  tuner_q.data
PAC/neuroPID/emulator_static_learn_vc/: ReadMe.txt  emulator_static_learn.vcxproj  emulator_static_learn.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h
PAC/neuroPID/neuroPID_vc/: ReadMe.txt  Resource.h  main.cpp  neuroPID.cpp  neuroPID.rc  neuroPID.sln  neuroPID.vcxproj  neuroPID.vcxproj.filters  stdafx.cpp  stdafx.h
PAC/uclinux/: prj_mngr_w750.cpp  prj_mngr_w750.h  sys_w750.cpp  sys_w750.h  tcp_cmctr.cpp  tcp_cmctr.h  tcp_cmctr_w750.cpp  tcp_cmctr_w750.h  wago_w750.cpp  wago_w750.h
PAC/win/: prj_mngr_win.cpp  prj_mngr_win.h  sys_win.cpp  sys_win.h  tcp_cmctr_win.cpp  tcp_cmctr_win.h  w_bus_coupler_io.cpp  w_bus_coupler_io.h  w_console.cpp  w_console.h  w_dtime.cpp  w_led.h  w_log.h  w_mem.cpp  w_mem.h  w_rm_tech_def.cpp  (+6 more)
PAC_control_projects/main_control_prg/eclipse/projects/PLCnext-linux-PLCnextEngineer/: .cproject  .project  CMakeLists.txt  plcnext.proj  user_words
PAC_control_projects/main_control_prg/eclipse/projects/PLCnext-linux-PLCnextEngineer/src/: PtusaMainCmpnt.hpp  PtusaMainPrg.cpp  PtusaMainPrg.hpp
PAC_control_projects/main_control_prg/visual_studio/ptusa/ptusa/: CMakeLists.txt  UndefClang.hpp  plcnext.proj  ptusa.vcxproj
PAC_control_projects/main_control_prg/visual_studio/ptusa/ptusa/src/: PtusaComponent.hpp  PtusaProgram.cpp  PtusaProgram.hpp
PTUSA configurator/: PTUSA configurator.wlua
Visio_project_designer/: Form_modes.Designer.cs  Form_modes.cs  Form_modes.resx  Ribbon1.Designer.cs  Ribbon1.cs  ThisAddIn.Designer.cs  ThisAddIn.Designer.xml  ThisAddIn.cs  Visio_project_designer.csproj  Visio_project_designer.sln  Visio_project_designer.sln.docstates  Visio_project_designer_TemporaryKey.pfx  device_list.Designer.cs  device_list.cs  edit_io.cs  edit_valve_type.cs  main.Designer.cs  main.Designer.xml  main.cs  main_ribbon.Designer.cs  main_ribbon.cs  modules_count_enter.Designer.cs  modules_count_enter.cs  tech_device.cs  wago.cs
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  main_test[1]_include.cmake  version_info.h
build-debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  main_test[1]_include.cmake  main_test[1]_tests.cmake  version_info.h
common/: lua_manager.cpp  lua_manager.h
demo_project/: main.devices.lua  main.io.lua  main.modbus_srv.lua  main.objects.lua  main.plua  main.profibus.lua  main.restrictions.lua
demo_projects/: network_settings_demo.lua
developer_manual/: readme.md
docs/: NETWORK_SETTINGS.md  alarm_management.md  alarm_management_en.md  style.md  valgrind-testing.md
lua_win/: luaconf.h
misc/: bi.cmake  bi.sh  bi_all.sh  bild_all.sh  colorize.sh
open62541/: CMakeLists.txt
russian_readme/: readme.md
soem/: CMakeLists.txt
test/: OPCUAServer_tests.cpp  OPCUAServer_tests.h  PAC_dev_lua_tests.cpp  PAC_dev_lua_tests.h  PAC_dev_tests.cpp  PAC_dev_tests.h  PAC_err_tests.cpp  PAC_err_tests.h  PAC_info_tests.cpp  PAC_info_tests.h  PID_tests.cpp  PID_tests.h  alarm_management_tests.cpp  alarm_management_tests.h  analog_emulator_tests.cpp  analog_emulator_tests.h  bus_coupler_io_tests.cpp  bus_coupler_io_tests.h  cip_tech_def_tests.cpp  cip_tech_def_tests.h  g_device_tests.cpp  g_device_tests.h  g_errors_tests.cpp  g_errors_tests.h  imitation_TE_tests.cpp  imitation_TE_tests.h  includes.h  l_tcp_cmctr_tests.cpp  l_tcp_cmctr_tests.h  lua_manager_dependencies.cpp  lua_manager_dependencies.h  lua_manager_tests.cpp  lua_manager_tests.h  main_cycle_test.cpp  main_cycle_test.h  main_test.cpp  mcaRec_tests.cpp  mcaRec_tests.h  mock_params_manager.cpp  mock_params_manager.h  (+34 more)
(+337 files in other folders)
